# Agentic_RAG

./: .gitignore  LICENSE  README.md  REPO_HEALTH_REPORT.md  app.py  app_deep_seek.py  app_llama3.2.py  chapter3_draft.md  pyproject.toml  test.py
eval/: README.md
eval/annualreport_benchmark/: README.md  annual_reports_benchmark_draft.jsonl  annual_reports_benchmark_v1.jsonl  removed_high_risk_draft_ids_v1.json
eval/annualreport_benchmark/results/: annual_reports_benchmark_v1_retrieval_eval_results.jsonl  annual_reports_benchmark_v1_retrieval_eval_summary.json  draft_query_eval_results.jsonl  draft_query_eval_summary.json  draft_retrieval_eval_results.entity_constrained.jsonl  draft_retrieval_eval_results.jsonl  draft_retrieval_eval_summary.entity_constrained.json  draft_retrieval_eval_summary.json
eval/scripts/: build_eval_dataset.py  build_evidence_table.py  generate_candidates.py  judge_semantic_correctness.py  run_end_to_end_agent_eval.py  run_offline_eval.py
knowledge/: CLASSIFICATION.md  DSPY的核心思想.docx  优化目标.docx  核心思想.docx
src/agentic_rag/: crew.py  main.py
src/agentic_rag/config/: agents.yaml  tasks.yaml
src/agentic_rag/tools/: custom_tool.py
