[project]
name = "agentic_rag"
version = "0.1.0"
description = "agentic-rag using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "chonkie[semantic]>=1.0.0",
    "crewai[tools]>=0.86.0,<1.0.0",
    "fastembed>=0.4.0",
    "markitdown>=0.0.1a3",
    "pillow>=11.0.0",
    "pymupdf>=1.25.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.12.1",
    "streamlit>=1.41.0",
]

[project.scripts]
agentic_rag = "agentic_rag.main:run"
run_crew = "agentic_rag.main:run"
train = "agentic_rag.main:train"
replay = "agentic_rag.main:replay"
test = "agentic_rag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/agentic_rag",
    "/README.md",
    "/pyproject.toml",
]
